--- a/nx.json
+++ b/nx.json
@@ -57,13 +57,25 @@
         "apps/notification-service-e2e/**/*",
         "apps/async-score-service-e2e/**/*",
         "apps/sync-score-service-e2e/**/*",
-        "apps/graphql-api-e2e/**/*"
+        "apps/graphql-api-e2e/**/*",
+        "apps/gsync-score-service-e2e/**/*"
       ]
     }
   ],
   "targetDefaults": {
     "test": {
       "dependsOn": ["^build"]
+    },
+    "build": {
+      "options": {
+        "assets": [
+          {
+            "glob": "*.proto",
+            "input": "apps/gsync-score-service/src/proto",
+            "output": "proto"
+          }
+        ]
+      }
     }
   }
 }
