--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "serve:api2": "NODE_OPTIONS='--inspect=0' nx serve graphql-api",
     "serve:api3": "NODE_OPTIONS='--inspect=0' nx serve notification-service",
     "serve:api4": "NODE_OPTIONS='--inspect=0' nx serve async-score-service",
-    "serve:api5": "NODE_OPTIONS='--inspect=0' nx serve sync-score-service"
+    "serve:api5": "NODE_OPTIONS='--inspect=0' nx serve sync-score-service",
+    "serve:api6": "NODE_OPTIONS='--inspect=0' nx serve gsync-score-service"
   },
   "private": true,
   "devDependencies": {
@@ -49,6 +50,8 @@
   "dependencies": {
     "@apollo/server": "^5.0.0",
     "@as-integrations/express5": "^1.1.2",
+    "@grpc/grpc-js": "^1.14.0",
+    "@grpc/proto-loader": "^0.8.0",
     "@nestjs/apollo": "^13.2.1",
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
@@ -65,6 +68,7 @@
     "kafkajs": "^2.2.4",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "ts-proto": "^2.7.7"
   }
 }
